--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "521 µs ± 121 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "487 µs ± 91.5 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.77 ms ± 572 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "2.36 ms ± 786 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -195,13 +195,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 2) (7, 10) (19234583730454798704, [(4, 2), (3, 1), (4, 0), (3, 0), (2, 0), (2, 1), (1, 1), (0, 0), (0, 1), (1, 2), (2, 2), (3, 3), (4, 3), (5, 2), (6, 1), (7, 0), (8, 0), (9, 0), (9, 1), (8, 2), (7, 1), (7, 2), (6, 2), (6, 3), (7, 3), (8, 3), (9, 2), (9, 3), (8, 4), (7, 4), (6, 4), (5, 3), (5, 4), (4, 4), (3, 4), (2, 3), (1, 3), (0, 2), (0, 3), (1, 4), (2, 4), (3, 5), (4, 5), (5, 5), (6, 5), (6, 6), (5, 6), (6, 7), (7, 7), (8, 6), (8, 5), (9, 4), (9, 5), (9, 6), (8, 7), (9, 7), (9, 8), (8, 9), (7, 10)])\n",
-      "(2, 10) (3, 0) (186357, [(2, 10), (2, 9), (2, 8), (2, 7), (2, 6), (2, 5), (2, 4), (2, 3), (2, 2), (2, 1), (3, 0)])\n",
-      "(3, 15) (2, 9) (39249, [(3, 15), (2, 14), (2, 13), (2, 12), (2, 11), (2, 10), (2, 9)])\n",
-      "(9, 14) (4, 15) (-1, [])\n",
-      "(7, 9) (8, 15) (-1, [])\n",
-      "The slowest run took 6.89 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "984 µs ± 588 µs per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "----------Case begin----------\n",
+      "Running formula for points (4, 2) (7, 10)\n",
+      "Path of length =  19234583730454798704 Path:  [(4, 2), (3, 1), (4, 0), (3, 0), (2, 0), (2, 1), (1, 1), (0, 0), (0, 1), (1, 2), (2, 2), (3, 3), (4, 3), (5, 2), (6, 1), (7, 0), (8, 0), (9, 0), (9, 1), (8, 2), (7, 1), (7, 2), (6, 2), (6, 3), (7, 3), (8, 3), (9, 2), (9, 3), (8, 4), (7, 4), (6, 4), (5, 3), (5, 4), (4, 4), (3, 4), (2, 3), (1, 3), (0, 2), (0, 3), (1, 4), (2, 4), (3, 5), (4, 5), (5, 5), (6, 5), (6, 6), (5, 6), (6, 7), (7, 7), (8, 6), (8, 5), (9, 4), (9, 5), (9, 6), (8, 7), (9, 7), (9, 8), (8, 9), (7, 10)]\n",
+      "---------- Case end ----------\n",
+      "\n",
+      "----------Case begin----------\n",
+      "Running formula for points (2, 10) (3, 0)\n",
+      "Path of length =  186357 Path:  [(2, 10), (2, 9), (2, 8), (2, 7), (2, 6), (2, 5), (2, 4), (2, 3), (2, 2), (2, 1), (3, 0)]\n",
+      "---------- Case end ----------\n",
+      "\n",
+      "----------Case begin----------\n",
+      "Running formula for points (3, 15) (2, 9)\n",
+      "Path of length =  39249 Path:  [(3, 15), (2, 14), (2, 13), (2, 12), (2, 11), (2, 10), (2, 9)]\n",
+      "---------- Case end ----------\n",
+      "\n",
+      "----------Case begin----------\n",
+      "Running formula for points (9, 14) (4, 15)\n",
+      "Path of length =  -1 Path:  []\n",
+      "---------- Case end ----------\n",
+      "\n",
+      "----------Case begin----------\n",
+      "Running formula for points (7, 9) (8, 15)\n",
+      "Path of length =  -1 Path:  []\n",
+      "---------- Case end ----------\n",
+      "\n",
+      "The slowest run took 4.43 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "896 µs ± 541 µs per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -211,7 +231,18 @@
     "p2 = (random.randint(0, len(grid) - 1), random.randint(0, len(grid[1]) - 1))\n",
     "while p1 == p2: (random.randint(0, len(grid) - 1), random.randint(0, len(grid[1]) - 1))\n",
     "\n",
-    "print(p1, p2, A_star_alg(grid, p1, p2))"
+    "print('-' * 10 + 'Case begin' + '-' * 10)\n",
+    "print('Running formula for points', p1, p2) \n",
+    "length, path = A_star_alg(grid, p1, p2)\n",
+    "print('Path of length = ', length, 'Path: ', path)\n",
+    "print('-' * 10 + ' Case end ' + '-' * 10 + '\\n')\n",
+    "# if length != - 1:\n",
+    "#     to_plot = grid.copy()\n",
+    "#     to_plot[to_plot == 0] = - 1\n",
+    "#     to_plot[to_plot == 1] = 0\n",
+    "#     for i, p in enumerate(path):\n",
+    "#         to_plot[p[0]][p[1]] = i + 1\n",
+    "#     print(to_plot)"
    ]
   },
   {
