--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "487 µs ± 91.5 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "402 µs ± 65 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.36 ms ± 786 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "2 ms ± 865 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -157,8 +157,9 @@
    "outputs": [],
    "source": [
     "def A_star_alg(grid, p1, p2):\n",
-    "    metric = lambda point1, point2: (point1[0] - point2[0]) ** 2 + (point1[1] + point2[1]) ** 2\n",
-    "#     metric = lambda point1, point2: abs(point1[0] - point2[0]) + abs(point1[1] + point2[1])\n",
+    "#     metric = lambda point1, point2: (point1[0] - point2[0]) ** 2 + (point1[1] - point2[1]) ** 2\n",
+    "#     metric = lambda point1, point2: abs(point1[0] - point2[0]) + abs(point1[1] - point2[1])\n",
+    "    metric = lambda point1, point2: max(abs(point1[0] - point2[0]), abs(point1[1] - point2[1]))\n",
     "    h = lambda p: metric(p, p2)\n",
     "    visited = set((p1,))\n",
     "    path = [p1]\n",
@@ -197,31 +198,80 @@
      "text": [
       "----------Case begin----------\n",
       "Running formula for points (4, 2) (7, 10)\n",
-      "Path of length =  19234583730454798704 Path:  [(4, 2), (3, 1), (4, 0), (3, 0), (2, 0), (2, 1), (1, 1), (0, 0), (0, 1), (1, 2), (2, 2), (3, 3), (4, 3), (5, 2), (6, 1), (7, 0), (8, 0), (9, 0), (9, 1), (8, 2), (7, 1), (7, 2), (6, 2), (6, 3), (7, 3), (8, 3), (9, 2), (9, 3), (8, 4), (7, 4), (6, 4), (5, 3), (5, 4), (4, 4), (3, 4), (2, 3), (1, 3), (0, 2), (0, 3), (1, 4), (2, 4), (3, 5), (4, 5), (5, 5), (6, 5), (6, 6), (5, 6), (6, 7), (7, 7), (8, 6), (8, 5), (9, 4), (9, 5), (9, 6), (8, 7), (9, 7), (9, 8), (8, 9), (7, 10)]\n",
+      "Path of length =  1801 Path:  [(4, 2), (3, 3), (2, 4), (2, 5), (3, 6), (4, 7), (4, 8), (5, 9), (6, 9), (7, 10)]\n",
       "---------- Case end ----------\n",
       "\n",
+      "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
+      " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0  0  0  0  3  4  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0 -1  2  0  0  5  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
+      " [ 0 -1  1  0  0  0 -1  6  7  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  8 -1  0  0  0 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  9  0  0  0 -1  0  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  0 10  0  0 -1  0  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (2, 10) (3, 0)\n",
-      "Path of length =  186357 Path:  [(2, 10), (2, 9), (2, 8), (2, 7), (2, 6), (2, 5), (2, 4), (2, 3), (2, 2), (2, 1), (3, 0)]\n",
+      "Path of length =  4609 Path:  [(2, 10), (2, 9), (1, 8), (0, 7), (0, 6), (1, 5), (1, 4), (0, 3), (1, 2), (2, 1), (3, 0)]\n",
       "---------- Case end ----------\n",
       "\n",
+      "[[ 0  0  0  8 -1 -1  5  4 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
+      " [-1  0  9  0  7  6 -1  0  3 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0 10  0  0  0  0  0  0  0  2  1  0  0  0  0  0  0  0  0  0]\n",
+      " [11  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
+      " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  0  0  0  0 -1  0  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (3, 15) (2, 9)\n",
-      "Path of length =  39249 Path:  [(3, 15), (2, 14), (2, 13), (2, 12), (2, 11), (2, 10), (2, 9)]\n",
+      "Path of length =  161 Path:  [(3, 15), (2, 14), (2, 13), (2, 12), (1, 11), (1, 10), (2, 9)]\n",
       "---------- Case end ----------\n",
       "\n",
+      "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
+      " [-1  0  0  0  0  0 -1  0  0 -1  6  5 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  7  0  0  4  3  2  0  0  0  0  0]\n",
+      " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  1  0  0 -1  0]\n",
+      " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  0  0  0  0 -1  0  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (9, 14) (4, 15)\n",
-      "Path of length =  -1 Path:  []\n",
+      "Path of length =  137 Path:  [(9, 14), (8, 13), (7, 12), (6, 12), (5, 13), (4, 14), (4, 15)]\n",
       "---------- Case end ----------\n",
       "\n",
+      "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
+      " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
+      " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  6  7  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  5 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  0  0  0  4 -1  0  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  0  0  0  3 -1  0  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  1  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (7, 9) (8, 15)\n",
-      "Path of length =  -1 Path:  []\n",
+      "Path of length =  329 Path:  [(7, 9), (6, 10), (5, 11), (5, 12), (5, 13), (6, 14), (7, 14), (8, 15)]\n",
       "---------- Case end ----------\n",
       "\n",
-      "The slowest run took 4.43 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "896 µs ± 541 µs per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
+      " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
+      " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  0 -1  3  4  5 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  0  2  0  0 -1  6  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  1  0  0  0 -1  7  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  0  8  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
+      "2.37 ms ± 756 µs per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -236,13 +286,13 @@
     "length, path = A_star_alg(grid, p1, p2)\n",
     "print('Path of length = ', length, 'Path: ', path)\n",
     "print('-' * 10 + ' Case end ' + '-' * 10 + '\\n')\n",
-    "# if length != - 1:\n",
-    "#     to_plot = grid.copy()\n",
-    "#     to_plot[to_plot == 0] = - 1\n",
-    "#     to_plot[to_plot == 1] = 0\n",
-    "#     for i, p in enumerate(path):\n",
-    "#         to_plot[p[0]][p[1]] = i + 1\n",
-    "#     print(to_plot)"
+    "if length != - 1:\n",
+    "    to_plot = grid.copy()\n",
+    "    to_plot[to_plot == 0] = - 1\n",
+    "    to_plot[to_plot == 1] = 0\n",
+    "    for i, p in enumerate(path):\n",
+    "        to_plot[p[0]][p[1]] = i + 1\n",
+    "    print(to_plot)"
    ]
   },
   {
