--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "402 µs ± 65 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "479 µs ± 164 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 ms ± 865 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "2.08 ms ± 606 µs per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -157,9 +157,9 @@
    "outputs": [],
    "source": [
     "def A_star_alg(grid, p1, p2):\n",
-    "#     metric = lambda point1, point2: (point1[0] - point2[0]) ** 2 + (point1[1] - point2[1]) ** 2\n",
+    "    metric = lambda point1, point2: (point1[0] - point2[0]) ** 2 + (point1[1] - point2[1]) ** 2\n",
     "#     metric = lambda point1, point2: abs(point1[0] - point2[0]) + abs(point1[1] - point2[1])\n",
-    "    metric = lambda point1, point2: max(abs(point1[0] - point2[0]), abs(point1[1] - point2[1]))\n",
+    "#     metric = lambda point1, point2: max(abs(point1[0] - point2[0]), abs(point1[1] - point2[1]))\n",
     "    h = lambda p: metric(p, p2)\n",
     "    visited = set((p1,))\n",
     "    path = [p1]\n",
@@ -198,27 +198,27 @@
      "text": [
       "----------Case begin----------\n",
       "Running formula for points (4, 2) (7, 10)\n",
-      "Path of length =  1801 Path:  [(4, 2), (3, 3), (2, 4), (2, 5), (3, 6), (4, 7), (4, 8), (5, 9), (6, 9), (7, 10)]\n",
+      "Path of length =  5403 Path:  [(4, 2), (5, 3), (6, 4), (6, 5), (6, 6), (6, 7), (7, 8), (7, 9), (7, 10)]\n",
       "---------- Case end ----------\n",
       "\n",
       "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
       " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  3  4  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0 -1  2  0  0  5  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
-      " [ 0 -1  1  0  0  0 -1  6  7  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [-1 -1  0  0  0  0  0  0 -1  8 -1  0  0  0 -1  0  0  0 -1  0]\n",
-      " [-1  0  0  0  0  0  0  0 -1  9  0  0  0 -1  0  0  0  0 -1 -1]\n",
-      " [ 0  0  0  0  0 -1 -1  0  0  0 10  0  0 -1  0  0  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
+      " [ 0 -1  1  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [-1 -1  0  2  0  0  0  0 -1  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  3  4  5  6 -1  0  0  0  0 -1  0  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  7  8  9  0  0 -1  0  0  0  0  0 -1]\n",
       " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (2, 10) (3, 0)\n",
-      "Path of length =  4609 Path:  [(2, 10), (2, 9), (1, 8), (0, 7), (0, 6), (1, 5), (1, 4), (0, 3), (1, 2), (2, 1), (3, 0)]\n",
+      "Path of length =  34813 Path:  [(2, 10), (2, 9), (2, 8), (2, 7), (2, 6), (2, 5), (2, 4), (2, 3), (2, 2), (2, 1), (3, 0)]\n",
       "---------- Case end ----------\n",
       "\n",
-      "[[ 0  0  0  8 -1 -1  5  4 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
-      " [-1  0  9  0  7  6 -1  0  3 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
-      " [ 0 10  0  0  0  0  0  0  0  2  1  0  0  0  0  0  0  0  0  0]\n",
+      "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
+      " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0 10  9  8  7  6  5  4  3  2  1  0  0  0  0  0  0  0  0  0]\n",
       " [11  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
       " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
@@ -228,12 +228,12 @@
       " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (3, 15) (2, 9)\n",
-      "Path of length =  161 Path:  [(3, 15), (2, 14), (2, 13), (2, 12), (1, 11), (1, 10), (2, 9)]\n",
+      "Path of length =  621 Path:  [(3, 15), (2, 14), (2, 13), (2, 12), (2, 11), (2, 10), (2, 9)]\n",
       "---------- Case end ----------\n",
       "\n",
       "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
-      " [-1  0  0  0  0  0 -1  0  0 -1  6  5 -1 -1  0  0  0  0 -1  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  7  0  0  4  3  2  0  0  0  0  0]\n",
+      " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  7  6  5  4  3  2  0  0  0  0  0]\n",
       " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  1  0  0 -1  0]\n",
       " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
@@ -243,22 +243,22 @@
       " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (9, 14) (4, 15)\n",
-      "Path of length =  137 Path:  [(9, 14), (8, 13), (7, 12), (6, 12), (5, 13), (4, 14), (4, 15)]\n",
+      "Path of length =  204 Path:  [(9, 14), (8, 14), (7, 14), (6, 14), (5, 15), (4, 15)]\n",
       "---------- Case end ----------\n",
       "\n",
       "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
       " [-1  0  0  0  0  0 -1  0  0 -1  0  0 -1 -1  0  0  0  0 -1  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
-      " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  6  7  0  0  0  0]\n",
-      " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  5 -1  0  0  0 -1  0]\n",
-      " [-1  0  0  0  0  0  0  0 -1  0  0  0  4 -1  0  0  0  0 -1 -1]\n",
-      " [ 0  0  0  0  0 -1 -1  0  0  0  0  0  3 -1  0  0  0  0  0 -1]\n",
-      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  6  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  0 -1  5  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  0  0  0  0 -1  4  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  0  0  0  0 -1  3  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  2  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  1  0 -1 -1  0  0]]\n",
       "----------Case begin----------\n",
       "Running formula for points (7, 9) (8, 15)\n",
-      "Path of length =  329 Path:  [(7, 9), (6, 10), (5, 11), (5, 12), (5, 13), (6, 14), (7, 14), (8, 15)]\n",
+      "Path of length =  635 Path:  [(7, 9), (7, 10), (7, 11), (7, 12), (8, 13), (8, 14), (8, 15)]\n",
       "---------- Case end ----------\n",
       "\n",
       "[[ 0  0  0  0 -1 -1  0  0 -1 -1  0 -1 -1  0  0  0  0  0  0 -1]\n",
@@ -266,12 +266,12 @@
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0]\n",
       " [ 0 -1  0  0  0  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
-      " [-1 -1  0  0  0  0  0  0 -1  0 -1  3  4  5 -1  0  0  0 -1  0]\n",
-      " [-1  0  0  0  0  0  0  0 -1  0  2  0  0 -1  6  0  0  0 -1 -1]\n",
-      " [ 0  0  0  0  0 -1 -1  0  0  1  0  0  0 -1  7  0  0  0  0 -1]\n",
-      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  0  0  8  0  0  0  0]\n",
+      " [-1 -1  0  0  0  0  0  0 -1  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
+      " [-1  0  0  0  0  0  0  0 -1  0  0  0  0 -1  0  0  0  0 -1 -1]\n",
+      " [ 0  0  0  0  0 -1 -1  0  0  1  2  3  4 -1  0  0  0  0  0 -1]\n",
+      " [ 0 -1  0  0  0  0  0  0 -1  0 -1  0  0  5  6  7  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 -1 -1  0  0  0 -1 -1  0  0]]\n",
-      "2.37 ms ± 756 µs per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "1.19 ms ± 627 µs per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
